JumpScript/tests/baselines/reference/staticMethodsReferencingClassTypeParameters.errors.txt
tests/cases/compiler/staticMethodsReferencingClassTypeParameters.jump(2,17): error TS2302: Static members cannot reference class type parameters.


==== tests/cases/compiler/staticMethodsReferencingClassTypeParameters.jump (1 errors) ====
    class C<T> {
        static s(p: T) { return p; }
                    ~
!!! error TS2302: Static members cannot reference class type parameters.
    }